workloads/heimdall/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-service
  namespace: media
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: heimdall
