workloads/heimdall/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: heimdall-network-policy
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: heimdall
  ingress:
    - from:
      - podSelector:
          matchLabels:
            run: access
